@@ -72,7 +72,39 @@ public class HorseJdbcDao implements HorseDao {
       throw new FatalException("Too many horses with ID %d found".formatted(id));
     }
 
-    return horses.get(0);
+    return horses.getFirst();
+  }
+
+  @Override
+  public Horse create(HorseDetailDto horse) {
+    LOG.trace("create({})", horse);
+
+    // Assuming that the "breed" property of HorseDetailDto contains the Breed object.
+    // fetch the Breed from the database first if it only contains the ID.
+    // what?
+
+    var update = jdbcTemplate.update("INSERT INTO " + TABLE_NAME
+                    + " (name, sex, date_of_birth, height, weight, breed_id)"
+                    + " VALUES (?, ?, ?, ?, ?, ?)",
+            horse.name(),
+            horse.sex().toString(),
+            horse.dateOfBirth(),
+            horse.height(),
+            horse.weight(),
+            horse.breed().id());
+
+    if (update != 1) {
+      // Handle the failure to insert a new horse
+      LOG.error("Failed to insert a new horse. Rows affected: {}", update);
+    }
+
+    // Fetch the newly created horse from the database
+    return jdbcTemplate.queryForObject(SQL_SELECT_BY_ID, this::mapRow, getLastInsertId());
+  }
+
+  // Helper method to get the last insert ID
+  private long getLastInsertId() {
+    return jdbcTemplate.queryForObject("SELECT LAST_INSERT_ID()", Long.class);
   }
 
   @Override
